JEI compat and code cleanup